namespace MintAnge.WarframeMarketAPI.Models;

public class ItemFull
{
    public int TradingTax { get; set; }
    public string Id { get; set; }
    public object SubIcon { get; set; }
    public string UrlName { get; set; }
    public string[] Tags { get; set; }
    public string Rarity { get; set; }
    public string Thumb { get; set; }
    public string Icon { get; set; }
    public int ModMaxRank { get; set; }
    public string IconFormat { get; set; }
    public ItemDescription En { get; set; }
    public ItemDescription Ru { get; set; }
    public ItemDescription Ko { get; set; }
    public ItemDescription Fr { get; set; }
    public ItemDescription Sv { get; set; }
    public ItemDescription De { get; set; }
    public ItemDescription Zhhant { get; set; }
    public ItemDescription Zhhans { get; set; }
    public ItemDescription Pt { get; set; }
    public ItemDescription Es { get; set; }
    public ItemDescription Pl { get; set; }
    public ItemDescription Cs { get; set; }
    public ItemDescription Uk { get; set; }
}