namespace MintAnge.WarframeMarketAPI.Models;

public class ItemShort
{
    public string Id { get; set; }
    public string Thumb { get; set; }
    public string ItemName { get; set; }
    public string UrlName { get; set; }
    public bool Vaulted { get; set; }
}
